--- a/src/public/checkout.html
+++ b/src/public/checkout.html
@@ -143,6 +143,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
+                    credentials: 'include',
                     body: JSON.stringify({
                         name: formData.customerName,
                         email: formData.email,
